hphp/test/zend/good/Zend/tests/class_name_as_scalar_error_002.php.expectf

Fatal error: Cannot use static or parent::class in constant declaration in %s/class_name_as_scalar_error_002.php on line 5
